--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   }
 }
