--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,8 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@testing-library/react": "^14.1.2",
-    "jest": "^27.5.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+    "jest": "^27.5.1"
   }
 }
