--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
