--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
+    "reselect": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
