--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker": "docker run --rm --name tf -p 3000:3000 -v /app/node_modules -v /app/build -v \"$(pwd):/app:ro\" training-frontend"
   },
   "eslintConfig": {
     "extends": [
