--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.0",
