--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
     "reselect": "^5.1.1",
+    "yup": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
