Refactor folder paths in VSCode settings.json and add color customization for frontend/src/validators folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,9 @@
             "color": "foldercustomization.AnsiColor211",
             "badge": "🖥️"
         },
+        {
+            "path": "frontend/src/validators/",
+            "color": "foldercustomization.AnsiColor9"
+        }
     ]
 }
