--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/css-reset": "6.10.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^14.5.1",
-    "@atlaskit/css-reset": "6.10.1",
     "axios": "^1.7.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -20,16 +20,16 @@
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
     "reselect": "^5.1.1",
+    "web-vitals": "^2.1.4",
     "yup": "^1.4.0",
-    "web-vitals": "^2.1.4"
+    "i18next": "^23.16.4",
+    "react-i18next": "^15.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "docker": "docker run --rm --name tf -p 3000:3000 -v /app/node_modules -v \"$(pwd):/app\" training-frontend",
-    "docker-build": "docker build -t training-frontend ."
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
