--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "react-i18next": "^15.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:react": "react-scripts start",
+    "watch:sass": "npx sass -w src/sass/main.scss src/css/style.css",
+    "start": "npm-run-all --parallel start:react watch:sass",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "watch:sass": "npx sass -w src/sass/main.scss src/css/style.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +55,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@testing-library/react": "^14.1.2",
     "jest": "^27.5.1",
-    "sass": "1.80.5"
+    "sass": "1.80.5",
+    "npm-run-all": "^4.1.5"
   }
 }
