--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "1.9.0",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
