--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trackoverload-frontend",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@atlaskit/css-reset": "6.10.1",
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.7.7",
     "country-flag-icons": "1.5.13",
-    "crypto-js": "4.2.0",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -38,6 +37,7 @@
     "start": "npm-run-all --parallel start:react watch:sass",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "docker-test": "jest --watchAll --runInBand --verbose #MUST BE RUN WITH DOCKER COMPOSE. LAUNCH ONLY docker-compose run --build --rm frontend-test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -59,9 +59,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@testing-library/react": "^14.1.2",
-    "jest": "^27.5.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "sass": "1.80.5",
     "npm-run-all": "^4.1.5"
   }
