--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^14.5.1",
     "axios": "^1.7.7",
     "country-flag-icons": "1.5.13",
+    "fuse.js": "^7.0.0",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
