--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "sass": "1.80.5",
     "npm-run-all": "^4.1.5"
   }
